test/zinc_source/compile_errors/callables/25_arrow_lambda_partial_annotation_mismatch.zn
// expected-error: parameter 'y' expects a compatible 'i32' value
fn main() {
    f = (x, y: i32) -> x + y
    print(f(1, 2.5))
}
